--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": " server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon server.js"
+        "start": "nodemon --exec babel-node --presets es2015 server.js"
     },
     "repository": {
         "type": "git",
@@ -27,6 +27,8 @@
         "mongoose": "^5.3.4",
         "nodemon": "^1.18.4",
         "password-validator": "^4.1.1",
-        "validator": "^10.8.0"
+        "validator": "^10.8.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-cli": "6.26.0"
     }
 }
