--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "node-modular-app",
     "version": "1.0.0",
     "description": "",
-    "main": " server.js",
+    "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon --exec babel-node --presets es2015 server.js"
+        "start": "nodemon --exec babel-node --presets es2015 ./src/server.js",
+        "compile": "babel src --out-dir .compiled --source-maps --watch"
     },
     "repository": {
         "type": "git",
