--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     },
     "homepage": "https://github.com/imasr/node-modular-app#readme",
     "dependencies": {
+        "babel-cli": "6.26.0",
+        "babel-preset-es2015": "^6.24.1",
         "bcrypt": "^3.0.2",
         "body-parser": "^1.18.3",
         "cors": "^2.8.4",
@@ -27,8 +29,6 @@
         "mongoose": "^5.3.6",
         "nodemon": "^1.18.4",
         "password-validator": "^4.1.1",
-        "validator": "^10.8.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-cli": "6.26.0"
+        "validator": "^10.8.0"
     }
 }
