--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dependencies": {
         "babel-cli": "6.26.0",
         "babel-preset-es2015": "^6.24.1",
-        "bcrypt": "^3.0.2",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
         "cors": "^2.8.4",
         "express": "^4.16.4",
